# ato

./: Cargo.toml  README.md
.github/workflows/: CI.yml
src/: angular_momentum.rs  atomic_orbital.rs  basis_function.rs  basis_set.rs  electron_shell.rs  elements.rs  files.rs  lib.rs
src/bse/: basisset_json.rs  http.rs  metadata_json.rs  mod.rs
