[package]
name = "ato"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = {version = "0.12", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0.52"
bincode = "1.3"
dirs = "4.0"
tokio = {version = "1.15", features = ["fs", "macros"] }
futures = "0.3"
num_enum = "0.5.6"
